--- a/cadastro.html
+++ b/cadastro.html
@@ -5,20 +5,41 @@
 	<meta charset="utf-8">
 </head>
 <body>
+
 	<br><br><br>
 	<center>
 	<form method="post" action="cadastro.php">
 
-		Nome: <input type="text" name="nome"> <br><br>
-		telefone: <input type="text" name="telefone"> <br><br>
-		email: <input type="text" name="email"> <br><br>
-		senha: <input type="password" name="senha"> <br><br>
-		cep: <input type="text" name="cep"> <br><br>
-		endereço: <input type="text" name="endereco"> <br><br>
-		complemento: <input type="text" name="complemento"> <br><br>
+	<table>
+		<tr>
+			<td><input placeholder="Nome" type="text" name="nome"></td>
+		</tr>
+		<tr>
+			<td><input placeholder="Telefone" type="text" name="telefone"></td>
+		</tr>
+		<tr>
+			<td><input placeholder="E-mail" type="text" name="email"></td>
 
+		</tr>
+		<tr>
+			<td><input placeholder="Senha" type="password" name="senha"></td>
 
-		<input type="submit" value="cadastrar" />
+		</tr>
+		<tr>
+			<td><input placeholder="Cep" type="text" name="cep"></td>
+
+		</tr>
+		<tr>
+			<td><input placeholder="Endereço" type="text" name="endereco"></td>
+		</tr>
+		<tr>
+			<td><input placeholder="Complemento" type="text" name="complemento"></td>
+		</tr>
+		<tr>
+			<td><input type="submit" value="cadastrar"></td>
+		</tr>
+	
+	</table>
 	</form>
 </center>
 
