--- a/login.html
+++ b/login.html
@@ -8,10 +8,17 @@
 	<br><br><br>
 	<center>
 	<form name="loginform" method="post" action="login.php">
-		<input type="text" placeholder="E-mail" name="email"><br><br>
-		<input type="password" placeholder="Senha" name="senha"><br><br>
-
-		<input type="submit" value="Entrar" name="enviar">
+		<table>
+			<tr>
+				<td><input type="text" placeholder="E-mail" name="email"></td>
+			</tr>
+			<tr>
+				<td><input type="password" placeholder="Senha" name="senha"></td>
+			</tr>
+			<tr>
+				<td><input type="submit" value="Entrar" name="enviar"></td>
+			</tr>
+		</table>
 	</form>
 </center>
 </body>
